<resources>
    <string name="app_name">NDC</string>
    <string name="ndc">Nuit du compas
        2024</string>
    <string name="welcome">La nuit du compas est de retour !</string>
    <string name="reseaux">Nos réseaux</string>
    <string name="projet">Cet été, les pionniers partent à Brno en République Tchèque pour aider à la rénovation d\'un couvent</string>
    <string name="but_soire">Chaque année, la nuit du compas permet de financer le projet humanitaire des pionniers</string>
    <string name="teaser_2024">Teaser 2024</string>
    <string name="decompte">0d 0h 0min 0s</string>
    <string name="login_btn">login_btn</string>
    <string name="inscrivez_vous">Inscrivez-vous</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="deja_un_compte_connectez_vous">Déja un compte? <u>Connectez-vous</u></string>
    <string name="pas_de_compte_sign_up"><u>Crée ton compte ici</u></string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="verif_mail">Nous avons envoyé un mail de vérification à votre adresse mail.</string>
    <string name="verif_mail_2">Vérifiez votre adresse mail pour pouvoir cloturer votre inscription.</string>
    <string name="j_ai_verif_mon_adresse_mail">j\'ai vérifié mon adresse mail</string>
    <string name="prend_photo">Publier des photos pendant la soirée. Elles seront ensuite publié sur les écrans</string>
    <string name="comment_ca_marche">En cliquant sur le bouton au dessus, vous pourrez ensuite prendre une photo et la publier sur les écrans.</string>
    <string name="attention_regle"><b>règles à suivre et protection des données:</b></string>
    <string name="les_regles_titre">Les règles:</string>
    <string name="integrite">1. Les photos pouvant porter atteintes à l\'intégrité d\'une ou des personne(s) sont interdites.</string>
    <string name="nudité">2. Les photos à caractére sexuel ou présentant de la nudité sont interdites.</string>
    <string name="consentement">3. Le consentement des personnes prises en photo est obligatoire.</string>
    <string name="pub">4. Tout contenu publicitaire est interdit.</string>
    <string name="soire_only">5. Seulement les photos prises à la soirée sont autorisées.</string>
    <string name="droit_orga">6. Les organisateurs se réservent le droit de sanctionner quiconque publierait une photo jugée innapropriée.</string>
    <string name="utilisation_titre">7. En publiant une photo, vous acceptez les règles et l\'utilisations des données.</string>
    <string name="utilisation_des_donnes">Utilisation des données:</string>
    <string name="utilisation_explain">Les photos sont sauvegardées et ensuite analysées pour trouver des potentielles transgressions aux règles énoncées.</string>
    <string name="utilisation_explain_2">Ensuite, elles seront publiées sur les écrans.</string>
    <string name="utilisation_explain_3">Les organisateurs se réservent le droit de pouvoir potentiellemnt par la suite publier une partie ou l\'intégralité.</string>
    <string name="btn_pic_descrip">btn_pic</string>
    <string name="empty"> </string>
    <string name="game_button">Start</string>
    <string name="home_button">home_button</string>
    <string name="link_btn">link_btn</string>
    <string name="img_btn">img_btn</string>
    <string name="logo">logo</string>
    <string name="logo_insta">logo_insta</string>
    <string name="logo_facebook">logo_facebook</string>
    <string name="astx_tom">\@astx_tom</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="info_btn">info_btn</string>
    <string name="add_pic_btn">add_pic_btn</string>
    <string name="gestion_du_compte">Gestion du compte</string>
    <string name="pseudo">pseudo</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="compte">compte</string>
    <string name="supprimer_mon_compte">supprimer mon compte</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Pseudo">Pseudo</string>
    <string name="score_0">score : 0</string>
    <string name="best_score_0">Best score : 0</string>
</resources>