<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".picture_fragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:background="@drawable/background_login_btn"
        android:elevation="4dp"
        android:contentDescription="@string/login_btn"
        android:src="@drawable/login_btn"
        android:adjustViewBounds="true"
        android:layout_margin="20dp"
        android:padding="5dp"
        />


    <ImageView
        android:id="@+id/pic_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/back_add_pic"
        android:elevation="4dp"
        android:padding="20dp"
        android:src="@drawable/pic_add_btn"
        android:contentDescription="@string/add_pic_btn"
        />

    <ImageView
        android:id="@+id/info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:layout_gravity="center"
        android:src="@drawable/info_btn"
        android:contentDescription="@string/info_btn"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rules"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        android:visibility="invisible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensensligth"
                android:text="@string/comment_ca_marche"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/attention_regle"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:drawableLeftCompat="@drawable/warning" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/les_regles_titre"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/integrite"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/nudité"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/consentement"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/pub"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/soire_only"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/droit_orga"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/utilisation_titre"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/utilisation_des_donnes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/utilisation_explain"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/utilisation_explain_2"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/utilisation_explain_3"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

    </ScrollView>






</LinearLayout>