<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    tools:context=".gestion_du_compte_fragment">

    <ImageButton
        android:id="@+id/quitter_gestion_compte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:elevation="25dp"
        android:padding="10dp"
        android:src="@drawable/close_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/compte" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/dark_blue"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensensligth"
                android:text="@string/gestion_du_compte"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_text"
                android:layout_margin="10dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pseudo_text"
                android:layout_margin="10dp"
                android:fontFamily="@font/opensensligth"
                android:text="@string/pseudo"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="20dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/login_pink"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <EditText
                        android:id="@+id/signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/back_login"
                        android:drawableStart="@drawable/personm_log_acti"
                        android:drawablePadding="8dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:autofillHints="password"
                        android:background="@drawable/back_login"
                        android:drawableStart="@drawable/lock_25"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/supp_compte_btn"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/red"
                        android:fontFamily="@font/opensensligth"
                        android:text="@string/supprimer_mon_compte"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:cornerRadius="20dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/deco_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black_blue"
                android:elevation="10dp"
                android:fontFamily="@font/opensensligth"
                android:drawableEnd="@drawable/logout"
                android:text="@string/deconnexion"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>